<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/manageHabit"
        android:title="Habits"
        app:showAsAction="never" />

    <item android:id="@+id/changePass"
        android:title="Change Password"
        app:showAsAction="never" />

    <item android:id="@+id/logout"
        android:title="Logout"
        app:showAsAction="never" />
</menu>