<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/editHabit"
        android:title="Edit Habit"
        app:showAsAction="never" />

    <item android:id="@+id/deleteHabit"
        android:title="Delete Habit"
        app:showAsAction="never" />

    <item android:id="@+id/share"
        android:title="Share"
        app:showAsAction="never" />
</menu>